aggiunto i waypoint di tipo ViaPoint oltre che ShapingPoint